--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,17 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+  <style>
+    * {
+      margin: 0;
+    }
+
+    .link {
+      color: inherit;
+      text-decoration: none;
+    }
+  </style>
+
 
   <title>React App</title>
 </head>
